OIP no longer covers text

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1260,6 +1260,7 @@ pre code {
 }
 
 .loadPFRDiv {
+  margin-top: 40px;
   position: relative;
 }
 
